Threads killed by time create new, but in limit with timeout_threads_resurect_max_count from config

--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,7 @@ mongo_data_load_per_once = 1000
 log_modules_items = 1
 kill_thread_after_secs = 300
 positive_limit_stop = 100
+timeout_threads_resurect_max_count = 10
 
 [selenium]
 max_threads = 5
