Fixed bug with endless selenium browser creating when it impossible. Added option browser_recreate_errors_limit for this actions limit, and logging message with exceptions text.

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ positive_limit_stop = 100
 timeout_threads_resurect_max_count = 10
 
 [selenium]
+browser_recreate_errors_limit = 10
 max_threads = 5
 firefox_path = /usr/bin/firefox
 virtual_display = 0
