Added config option main.put_data_into_db, which enable/disable data putting into DB in work whiles

--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ log_modules_items = 1
 kill_thread_after_secs = 300
 positive_limit_stop = 100
 timeout_threads_resurect_max_count = 10
+put_data_into_db = 1
 
 [selenium]
 browser_recreate_errors_limit = 10
