tests to pytest and open

--- a/tests/run/config.ini
+++ b/tests/run/config.ini
@@ -18,7 +18,7 @@ put_data_into_db = 1
 browser_recreate_errors_limit = 10
 max_threads = 5
 firefox_path = /usr/bin/firefox
-virtual_display = 1
+virtual_display = 0
 timeout_page_load = 15
 images_load = 1
 css_load = 1
@@ -34,11 +34,11 @@ database = test_ws
 host = localhost
 username =
 password =
-collection = test_ws
+collection = ws
 port = 27017
 
 [spider]
-denied_schemes = denied1, denied2, denied3
+denied_schemes = mailto, javascript, data
 
 noscan_content_types =
 scan_content_types =
