--- a/tests/run/configs/disable-mime.ini
+++ b/tests/run/configs/disable-mime.ini
@@ -1,21 +1,21 @@
 [main]
-version = v0.2a
+version = v0.1a
 max_size = 300000
 default_threads = 10
 standart_msymbol=@
-locale=en_US.UTF8
+locale=ru_RU.UTF8
 requests_per_proxy = 50
 proxies_died_limit = 40
-confirm = 1
+confirm = 0
 mongo_data_load_per_once = 1000
-log_modules_items = 0
+log_modules_items = 1
 kill_thread_after_secs = 300
 positive_limit_stop = 100
 timeout_threads_resurect_max_count = 10
 put_data_into_db = 1
 
 [selenium]
-browser_recreate_errors_limit = 10
+browser_recreate_errors_limit = 1
 max_threads = 5
 firefox_path = /usr/bin/firefox
 virtual_display = 1
@@ -30,17 +30,18 @@ user = ws
 pass = wspass
 database = test_ws
 
+
 [mongo]
 host = localhost
 username =
 password =
-collection = test_ws
+collection = wr3
 port = 27017
 
 [spider]
-denied_schemes = denied1, denied2, denied3
+denied_schemes = mailto, javascript, data
 
-noscan_content_types =
+noscan_content_types = application/javascript
 scan_content_types =
 
 allow_exts = htm, html, xml, xsl, js, php, php3, php4, php5, php6, py, pl, rb, phtml, shtml, dhtml, txt, css, cgi
@@ -50,29 +51,6 @@ stat_slowest_links_count = 10
 tags = a|href,script|src,img|src,iframe|src,frame|src,link|href
 requests_limit = 0
 
-[backups]
-ignore_exts = jpg,gif,png,ico,css,js,txt
-
-[cms]
-percent = 60
-
-[pre]
-
-[fuzzer]
-
-
 [dafs]
-retest_limit = 30
-retest_delay = 5
-
-[hosts_brute]
-retest_limit = 30
-retest_delay = 5
-
-[form_bruter]
-retest_limit = 30
-retest_delay = 5
-
-[params_bruter]
 retest_limit = 30
 retest_delay = 5
