--- a/tests/run/configs/requests-limit.ini
+++ b/tests/run/configs/requests-limit.ini
@@ -1,21 +1,21 @@
 [main]
-version = v0.2a
+version = v0.1a
 max_size = 300000
 default_threads = 10
 standart_msymbol=@
-locale=en_US.UTF8
+locale=ru_RU.UTF8
 requests_per_proxy = 50
 proxies_died_limit = 40
-confirm = 1
+confirm = 0
 mongo_data_load_per_once = 1000
-log_modules_items = 0
+log_modules_items = 1
 kill_thread_after_secs = 300
 positive_limit_stop = 100
 timeout_threads_resurect_max_count = 10
 put_data_into_db = 1
 
 [selenium]
-browser_recreate_errors_limit = 10
+browser_recreate_errors_limit = 1
 max_threads = 5
 firefox_path = /usr/bin/firefox
 virtual_display = 1
@@ -30,15 +30,16 @@ user = ws
 pass = wspass
 database = test_ws
 
+
 [mongo]
 host = localhost
 username =
 password =
-collection = test_ws
+collection = wr3
 port = 27017
 
 [spider]
-denied_schemes = denied1, denied2, denied3
+denied_schemes = mailto, javascript, data
 
 noscan_content_types =
 scan_content_types =
@@ -48,10 +49,11 @@ links_one_time_in_work = 10
 
 stat_slowest_links_count = 10
 tags = a|href,script|src,img|src,iframe|src,frame|src,link|href
-requests_limit = 0
+requests_limit = 5
 
 [backups]
 ignore_exts = jpg,gif,png,ico,css,js,txt
+
 
 [cms]
 percent = 60
@@ -62,17 +64,5 @@ percent = 60
 
 
 [dafs]
-retest_limit = 30
-retest_delay = 5
-
-[hosts_brute]
-retest_limit = 30
-retest_delay = 5
-
-[form_bruter]
-retest_limit = 30
-retest_delay = 5
-
-[params_bruter]
 retest_limit = 30
 retest_delay = 5
